[package]
name = "not_leonian_ac_lib"
version = "0.1.0"
authors = ["Not_Leonian"]
edition = "2018"
rust-version = "1.70.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-library-rs = "0.1.1"
memoise = "0.3.2"
multimap = "0.9.0"
btreemultimap = "0.1.1"
num = "0.4.1"
num-bigint = "0.4.3"
num-complex = "0.4.3"
num-integer = "0.1.45"
num-iter = "0.1.43"
num-rational = "0.4.1"
num-traits = "0.2.15"
num-derive = "0.4.0"
libm = "0.2.7"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = "0.2.10"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand_hc = "0.3.2"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
regex = "1.9.1"
ordered-float = "3.7.0"
superslice = "1.0.0"
itertools = "0.11.0"
itertools-num = "0.1.3"
proconio = { version = "0.4.5", features = ["derive"] }
